--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -264,14 +264,20 @@
             </intent-filter>
         </receiver>
 
-
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".activity.LoadingActivity"
+            android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity" />
+
+        <activity android:name=".activity.GuideActivity" />
+
     </application>
 
 </manifest>
