--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.gyf.barlibrary:barlibrary:2.3.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+    compile 'com.shuyu:GSYVideoPlayer:4.1.2'
+    compile 'com.youth.banner:banner:1.4.10'
+    compile 'com.hyman:flowlayout-lib:1.1.2'
 }
