--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -44,4 +44,13 @@ dependencies {
     compile 'com.shuyu:GSYVideoPlayer:4.1.2'
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.hyman:flowlayout-lib:1.1.2'
+    compile 'com.github.GrenderG:Toasty:1.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'ru.noties:scrollable:1.3.0'
+    compile 'ru.noties:ccf:1.0.0'
+    compile 'ru.noties:vt:1.0.0'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.3@aar'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 }
