--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -273,19 +273,47 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.GuideActivity" />
+        <activity
+            android:name=".activity.GuideActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.TalentClassActivity" />
+        <activity
+            android:name=".activity.TalentClassActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.PublishPictureTextActvity" />
+        <activity
+            android:name=".activity.PublishPictureTextActvity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="org.lasque.tusdk.impl.activity.TuFragmentActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
+
+        <activity
+            android:name=".activity.JoinTalentActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.GraphicDynamicDetailsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.LoginWithPwdActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.SettingPasswordActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
