--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.qiniu:qiniu-android-sdk:7.3.+'
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'top.zibin:Luban:1.1.4'
+    implementation 'com.github.GrenderG:Toasty:1.1.3'
 }
