--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'top.zibin:Luban:1.1.4'
     implementation 'com.github.GrenderG:Toasty:1.1.3'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
+    compile 'com.j256.ormlite:ormlite-core:5.0'
 }
