自定义Dialog，自定义EmptyView，LoadMoreView,定义API接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -340,6 +340,11 @@
             android:name=".activity.SearchActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".activity.PublishVideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
