功能开发，商务合作，加入我们

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -297,7 +297,8 @@
 
         <activity
             android:name=".activity.JoinTalentActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
 
         <activity
             android:name=".activity.GraphicDynamicDetailsActivity"
@@ -326,7 +327,8 @@
 
         <activity
             android:name=".activity.BusinessCooperationActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
 
         <activity
             android:name=".activity.TalentHomePageActivity"
