--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.j256.ormlite:ormlite-core:5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.zhy:okhttputils:2.6.2'
 }
