--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,34 @@ android {
         applicationId "com.xkh.hzp.xkh"
         minSdkVersion rootProject.android.minSdkVersion
         targetSdkVersion rootProject.android.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        release {
+            keyAlias 'hzp'
+            keyPassword '123456'
+            storeFile file('hzpkey.jks')
+            storePassword '123456'
+            v2SigningEnabled false
+        }
+        debug {
+            storeFile file("debug.keystore")
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
+            minifyEnabled false
         }
     }
 
@@ -38,15 +57,16 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.qiniu:qiniu-android-sdk:7.3.+'
+    compile 'com.qiniu:qiniu-android-sdk:7.3.0'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'top.zibin:Luban:1.1.4'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.j256.ormlite:ormlite-core:5.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jaeger.statusbarutil:library:1.5.1'
+    compile 'com.ms-square:expandableTextView:0.1.4'
 }
