--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,7 @@
 
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="${CHANNEL_NAME_VALUE}" />
+            android:value="CHANNEL_NAME_VALUE" />
 
         <meta-data
             android:name="com.alibaba.app.appkey"
